--- a/exam_cards.tex
+++ b/exam_cards.tex
@@ -2,7 +2,7 @@
   12pt,
   a4paper,
 ]{article}
-
+% Версия 1.0.1
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Настройки по умолчанию
