stable patch version v.1.0.0

--- a/tex_form/config.tex
+++ b/tex_form/config.tex
@@ -5,18 +5,18 @@
 
 \newcommand{\University}
 {
-  Федеральное государственное автономное\\
-  образовательное учреждение высшего образования\\
-  научно-исследовательский институт чародейства и волшебства\\
-  (<<НИИЧАВО>>)
+  "Федеральное государственное автономное образовательное учреждение\\
+  высшего образования «Московский государственный технический университет\\
+  имени Н.Э. Баумана (национальный исследовательский университет)"\\
+  (<<МГТУ им. Н.Э. Баумана >>)
 }
-\newcommand{\Department}{<<Смысла жизни>>}
-\newcommand{\HeadOfDepartment}{К.Х.~Хунта}
-\newcommand{\Course}{Путешествия по выдуманным мирам}
-\newcommand{\Teacher}{Седловой~Л.~И.}
+\newcommand{\Department}{<<КАФЕДРА ИУ10 «ЗАЩИТА ИНФОРМАЦИИ»>>}
+\newcommand{\HeadOfDepartment}{А.М. Сычев}
+\newcommand{\Course}{Управление рисками информационной безопасности}
+\newcommand{\Teacher}{Шмаков И.С.}
 \newcommand{\AcademicYear}{2025-2026}
-\newcommand{\DecreeNumber}{01.23-45/6ДСП}
-\newcommand{\DecreeDate}{11.11.2025}
+\newcommand{\DecreeNumber}{04.22-04/4ДСП}
+\newcommand{\DecreeDate}{24.11.2025}
 
 \newcommand{\FileQuestions}{questions.csv}
 \newcommand{\NumberOfQuestions}{3}
